sharinpix/src/objects/EinsteinModel__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EinsteinDataset__c</fullName>
        <label>Einstein Dataset</label>
        <referenceTo>EinsteinDataset__c</referenceTo>
        <relationshipLabel>Einstein Models</relationshipLabel>
        <relationshipName>Einstein_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Epochs__c</fullName>
        <description>Optional. Number of training iterations for the neural network. Valid values are 1–100. If not specified, the default is calculated based on the dataset size. The larger the number, the longer the training takes to complete.</description>
        <inlineHelpText>Optional. Number of training iterations for the neural network. Valid values are 1–100. If not specified, the default is calculated based on the dataset size. The larger the number, the longer the training takes to complete.</inlineHelpText>
        <label>Epochs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LearningRate__c</fullName>
        <description>Optional. Specifies how much the gradient affects the optimization of the model at each time step. Use this parameter to tune your model. Valid values are between 0.0001 and 0.01. If not specified, the default is 0.0001. We recommend keeping this value between 0.0001 and 0.001.</description>
        <inlineHelpText>Optional. Specifies how much the gradient affects the optimization of the model at each time step. Use this parameter to tune your model. Valid values are between 0.0001 and 0.01. If not specified, the default is 0.0001.</inlineHelpText>
        <label>LearningRate</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainParams__c</fullName>
        <description>Optional. JSON that contains parameters that specify how the model is created. Valid values:
{&quot;trainSplitRatio&quot;: 0.n}—Lets you specify the ratio of data used to train the dataset and the data used to test the model. The default split ratio is 0.9; 90% of the data is used to train the dataset and create the model and 10% of the data is used to test the model. If you pass in a split ratio of 0.6, then 60% of the data is used to train the dataset and create the model and 40% of the data is used to test the model.</description>
        <inlineHelpText>Optional. JSON that contains parameters that specify how the model is created. Valid values:
{&quot;trainSplitRatio&quot;: 0.n}—Lets you specify the ratio of data used to train the dataset and the data used to test the model.</inlineHelpText>
        <label>TrainParams</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Einstein Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>